# parsers

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
parser_service/: config.py  niches.py  proxy_pool.py  scoring.py  triggers.py
parser_service/celery_app/: celery_config.py  tasks.py
parser_service/crm/: __init__.py  amocrm.py  notify.py
parser_service/db/: models.py  session.py
parser_service/parsers/: __init__.py  avito.py  base.py  browser.py  instagram.py
parser_service/telegram/: client.py  listener.py  sender.py  triggers.py
scripts/: seed.py  stress_seed.py
